# ai-playground

./: .gitignore
application-tracking-system/.github/: copilot-instructions.md
application-tracking-system/ats-backend/: .env.example  .gitignore  README.md  pip-freeze.txt  pyproject.toml
application-tracking-system/ats-backend/docs/: high-level-specification-backend.md  implementation-planning-backend.md
application-tracking-system/ats-backend/scripts/: update_python_path.sh
application-tracking-system/ats-backend/src/: __init__.py  main.py
application-tracking-system/ats-backend/src/api/: __init__.py  dependencies.py
application-tracking-system/ats-backend/src/api/routes/: __init__.py
application-tracking-system/ats-backend/src/core/: __init__.py  config.py  security.py
application-tracking-system/ats-backend/src/database/: __init__.py  models.py  session.py
application-tracking-system/ats-backend/src/models/: __init__.py  schemas.py
application-tracking-system/ats-backend/src/nlp/: __init__.py  embeddings.py  matcher.py  parser.py
application-tracking-system/ats-backend/tests/: __init__.py  conftest.py  test_main.py  test_matcher.py  test_parser.py  test_security.py
application-tracking-system/ats-frontend/: package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
application-tracking-system/ats-frontend/docs/: high-level-specification-frontend.md  implementation-planning.md
application-tracking-system/ats-frontend/src/hooks/: useCandidateFilter.ts  useMatchScoreCalculation.ts  useOptimisticStatus.ts  usePDFViewer.ts  useSemanticSearch.ts
application-tracking-system/ats-frontend/src/lib/: constants.ts  match-score.ts  server-actions.ts  skill-extraction.ts  validators.ts
application-tracking-system/ats-frontend/src/services/: backend.ts  candidates-api.ts  resume-api.ts  search-api.ts
application-tracking-system/ats-frontend/src/styles/: KanbanBoard.module.css  MetricDashboard.module.css  ResumeParserSplit.module.css
application-tracking-system/ats-frontend/src/types/: api.ts  candidate.ts  index.ts
application_tracking_system/: project_planning.md
infrastructure/kubernetes/: .gitkeep
model_context_protocol/py-mcp/: .ai-context  .copilot-agent-instructions.yaml  .copilotignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CONFIGURATION.md  INDEX.md  MCP_SERVER_GUIDE.md  Makefile  QUICK_REFERENCE.md  pyproject.toml
model_context_protocol/py-mcp/.claude/skills/implement-mcp-server/: SKILL.md  SKILLS.md
model_context_protocol/py-mcp/.claude/skills/implement-mcp-server/references/: checklist.md  examples.md  patterns.md
model_context_protocol/py-mcp/.github/: copilot-instructions.md
model_context_protocol/py-mcp/clients/: README.md  http_client.py  mcp_client_desktop.py
model_context_protocol/py-mcp/clients/logging_and_progress/: mcp_client_logging_and_progress.py  servers_config.json
model_context_protocol/py-mcp/scripts/: setup.sh  start-mcp-server.sh  start-mpc-server.sh  test-mcp-client.sh
model_context_protocol/py-mcp/scripts/http-client/: complex-inputs.http  mcp-echo.http
model_context_protocol/py-mcp/src/: __init__.py  __main__.py  complex_inputs.py  desktop.py  direct_call_tool_result_return.py  echo.py  generic_echo.py  icons_demo.py  logging_and_progress.py  memory.py  screenshot.py  server.py  text_me.py  unicode_example.py  weather_structured.py
model_context_protocol/py-mcp/src/servers/simple-prompt/: README.md  __main__.py  simple_prompt_server.py
model_context_protocol/py-mcp/src/servers/simple_pagination/: __main__.py  mcp_simple_pagination.py
model_context_protocol/py-mcp/src/servers/simple_resource/: README.md  simple_resource_mcp_server.py
model_context_protocol/py-mcp/src/servers/simple_task/: __main__.py  simple_task_server.py
model_context_protocol/py-mcp/src/servers/simple_task_interactive/: __main__.py  simple_task_interactive.py
model_context_protocol/py-mcp/src/servers/simple_tool/: README.md  __init__.py  simple_tool_mcp_server.py
model_context_protocol/py-mcp/tests/: test_complex_inputs.py  test_desktop.py  test_direct_call_tool_result_return.py  test_echo.py  test_generic_echo.py  test_icons_demo.py  test_mcp_client_desktop.py  test_memory.py  test_screenshot.py  test_server.py  test_simple_resource_mcp.py  test_simple_tool_mcp.py  test_sms_api.py  test_weather_structured.py
model_context_protocol/ts-mcp/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
model_context_protocol/ts-mcp/src/: index.ts
real_time_fraud_detection_azure/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  implementation_plan_mvp.md  pyproject.toml  setup.sh
real_time_fraud_detection_azure/.github/: copilot-instructions.md  copilot.yaml
real_time_fraud_detection_azure/docs/: README.md  policy_as_code_inspection_automation.md
real_time_fraud_detection_azure/infrastructure/: FILE_STRUCTURE_CHECKLIST.md  README.md
real_time_fraud_detection_azure/infrastructure/scripts/: deploy.bat  deploy.sh
real_time_fraud_detection_azure/infrastructure/terraform/: .gitignore  DEPLOYMENT_GUIDE.md  MODULE_GUIDE.md  QUICK_REFERENCE.md  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
real_time_fraud_detection_azure/infrastructure/terraform/modules/azure_ml/: main.tf  outputs.tf  variables.tf
real_time_fraud_detection_azure/monitoring/: README.md
real_time_fraud_detection_azure/pipelines/: README.md
real_time_fraud_detection_azure/pipelines/infrastructure/: terraform-policy-pipeline.yml
real_time_fraud_detection_azure/policies/: .conftest.yaml  QUICK_REFERENCE.md  README.md  test-policies.sh
real_time_fraud_detection_azure/policies/kubernetes/: security.rego
real_time_fraud_detection_azure/policies/kubernetes/gatekeeper/: container-limits.yaml  no-privileged-containers.yaml  required-labels.yaml
real_time_fraud_detection_azure/policies/terraform/azure/: resource_tags.rego
real_time_fraud_detection_azure/system_design/: README.md
(+4 files in other folders)
