# toml
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-mcp"
version = "0.1.0"
description = "Python Model Context Protocol"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "mcp>=1.23.3",
    "anyio>=4.12.0",
    "fastapi>=0.128.0",
    "fastapi-mcp>=0.1.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.40.0",
    "slowapi>=0.1.8",
    "pillow>=12.1.0",
    "pyautogui>=0.9.54",
]

authors = [
    {name = "Akai Kaede", email = "it.scope@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "ruff>=0.14.0",
    "pyright>=1.1.350",
    "pre-commit>=4.5.1",
    "mdformat>=0.7.0",
]

[tool.ruff]
# removed top-level line-length (use tool.ruff.format)
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "UP",
    "ARG",
    "SIM",
    "LOG",
]
ignore = [
    "E501",
    "E741",
]

[tool.ruff.format]
line-length = 100
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = [
    ".git",
    ".venv",
    "**/node_modules",
    "**/__pycache__",
    ".eggs",
    "build",
    "dist",
]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers -v"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*Protocol.*:",
]
